# comfydv

./: .gitignore  CHANGELOG.md  CLAUDE.md  Justfile  LICENSE  README.md  ROADMAP.md  __init__.py  beacon.md  comfy-manager-entry.json  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  stable  versions.json
.claude/: CLAUDE.md  loop.md  settings.json
.claude/agents/: beacon-auditor.md  beacon-engineering.md  beacon-product.md  beacon-reviewer.md
.claude/commands/: init.md
.github/workflows/: docs.yml
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
0.1.0/: 404.html  index.html  objects.inv
0.1.0/search/: search_index.json
0.1.1.dev2+ge42913d58/: 404.html  objects.inv
0.1.1.dev23+g9ca65bc29/: 404.html  index.html  objects.inv
0.1.1.dev23+g9ca65bc29/search/: search_index.json
0.1.1.dev31+gd59a85dba/: index.html
0.1.1.dev31+gd59a85dba/search/: search_index.json
0.1.1.dev35+g27b26ec7a/: objects.inv
0.1.1.dev39+g834ae3e9e/: index.html
0.1.1.dev39+g834ae3e9e/search/: search_index.json
0.1.1.dev4+g23f8f5549/: index.html
0.1.1.dev42+g92da4fc11/: 404.html
0.1.1.dev45+g87ec79be1/: 404.html  objects.inv
0.1.1.dev47+ge432054b4/search/: search_index.json
0.1.1.dev49+g8cb9a7446/search/: search_index.json
0.1.1.dev69+g6c3c34191/: index.html
0.1.1.dev69+g6c3c34191/search/: search_index.json
0.1.1.dev8+g50076d7c6/: objects.inv
0.1.1.dev8+g50076d7c6/search/: search_index.json
docker/: Dockerfile
docs/: index.md
project-management/.beacon/: bullets.toml  doctor.toml.example  init-options.json
project-management/ADRs/: ADR-000-template.md  ADR-001-stdlib-logging-over-console-libraries.md  ADR-002-nullhandler-pattern-for-library-loggers.md  ADR-003-requirements-txt-authoring-policy.md  ADR-004-aiohttp-over-httpx-for-ollama.md  ADR-005-ollama-host-config-via-client-node.md  ADR-006-structured-ollama-output-tool-calling-not-pydantic-ai.md  ADR-007-llm-provider-adapter-pattern.md  ADR-008-multimodal-image-input-across-llmprovider-boundary.md  README.md
project-management/Background/: 00-problem-statement.md  01-final-architecture-document.md
project-management/Roadmap/: README.md
project-management/Work/: README.md
scripts/: gen_ref_pages.py  take_screenshots.py
specs/001-standardise-logging/: .beacon.toml  plan.md  research.md  spec.md  tasks.md
specs/002-manager-compatible-install-requirements-txt-and-custom-node-list-registration/: plan.md  spec.md  tasks.md
specs/003-formatstring-frontend-ux-debounce-connection-migration-node-id-parity-toast-feedback/: .beacon.toml
specs/006-ollama-model-integration/: .beacon.toml  plan.md  spec.md  tasks.md
specs/007-llm-provider-abstraction/: .beacon.toml  atomic-cutover-plan.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-llamacpp-integration/: .beacon.toml  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-vlm-image-input/: plan.md  (+6 more)
tests/: README.md  __init__.py  conftest.py  test_comfyui_import_compat.py  test_format_string.py  test_llamacpp.py  test_llamacpp_provider.py  test_llm_chat_structured.py  test_llm_provider.py  test_llm_retry.py  test_logging.py  test_ollama.py  test_ollama_provider.py  test_packaging.py
v0.1.0/: 404.html  index.html  objects.inv
(+158 files in other folders)
