[project]
name = "comfydv"
version = "0.1.0"
requires-python = ">=3.11"
description = "Quality of life ComfyUI nodes: dynamic string formatting, seed-controlled random selection, and conditional queue interruption."
readme = "README.md"
authors = [
    { name = "darth-veitcher", email = "1722315+darth-veitcher@users.noreply.github.com" }
]
dependencies = [
    "aiohttp>=3.9.0",
    "jinja2>=3.1.6",
]

[project.urls]
Repository = "https://github.com/darth-veitcher/comfydv"
Documentation = "https://darth-veitcher.github.io/comfydv/stable/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "playwright>=1.60.0",
    "pytest>=8.4.2",
    "pytest-cov>=6.0.0",
    "pyyaml>=6.0.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]
docs = [
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.9",
    "mkdocs-section-index>=0.3.9",
    "mkdocstrings[python]>=0.29.0",
    "shtab>=1.7.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Note: Root __init__.py is excluded to avoid ComfyUI import issues during testing
norecursedirs = [".git", ".venv", "htmlcov", "docs"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/comfydv",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--ignore=__init__.py",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests requiring live Ollama at localhost:11434",
    "system: System tests requiring the full docker-compose harness",
    "slow: Slow tests",
]
